# green-ai-planning

./: README.md
analysis-scripts/: create_plot.py
instance-generators/: generate_recharging_instances.sh  generate_ricochet_instances.sh
measurement-data/: README.md
measurement-data/baseline/result/: baseline_energy_measurement.csv
measurement-tool/: .gitignore  README.md  run_measurement.sh
measurement-tool/domain/: README.md
measurement-tool/domain/barman-MI-REF1/: domain.pddl
measurement-tool/domain/barman-MI-REF2/: domain.pddl
measurement-tool/domain/barman-MI-ROA/: domain.pddl
measurement-tool/domain/barman-MI-ROB/: problem01.pddl  problem03.pddl  problem05.pddl  problem07.pddl  problem09.pddl  problem11.pddl  problem13.pddl  problem15.pddl  problem17.pddl  problem19.pddl
measurement-tool/domain/barman-MI-ROP/: domain.pddl
measurement-tool/domain/barman-MI-RPA/: domain.pddl  problem01.pddl  problem03.pddl  problem05.pddl  problem07.pddl  problem09.pddl  problem11.pddl  problem13.pddl  problem15.pddl  problem17.pddl  problem19.pddl
measurement-tool/domain/barman-MI-RPD/: domain.pddl
measurement-tool/domain/barman-MI-RPR1/: domain.pddl
measurement-tool/domain/barman-MI-RPR2/: domain.pddl
measurement-tool/domain/barman-SC-APD/: domain.pddl
measurement-tool/domain/barman-SC-COP/: domain.pddl
measurement-tool/domain/barman-SC-DEF/: domain.pddl
measurement-tool/domain/barman-SC-RPD/: domain.pddl
measurement-tool/domain/barman-SV-EFA1/: domain.pddl
measurement-tool/domain/barman-SV-EFA2/: domain.pddl
measurement-tool/domain/barman-SV-EFR/: domain.pddl
measurement-tool/domain/barman-SV-OAN1/: domain.pddl
measurement-tool/domain/barman-SV-OAN2/: domain.pddl
measurement-tool/domain/barman-SV-OEF1/: domain.pddl
measurement-tool/domain/barman-SV-OEF2/: domain.pddl
measurement-tool/domain/barman-SV-ONE1/: domain.pddl
measurement-tool/domain/barman-SV-ONE2/: domain.pddl
measurement-tool/domain/barman-SV-OPA1/: domain.pddl
measurement-tool/domain/barman-SV-OPA2/: domain.pddl
measurement-tool/domain/barman-SV-OPR1/: domain.pddl
measurement-tool/domain/barman-SV-OPR2/: domain.pddl
measurement-tool/domain/barman-SV-ORA1/: domain.pddl
measurement-tool/domain/barman-SV-ORA2/: domain.pddl
measurement-tool/domain/barman-SV-PDA1/: domain.pddl
measurement-tool/domain/barman-SV-PDA2/: domain.pddl
measurement-tool/domain/barman-SV-PDU1/: domain.pddl
measurement-tool/domain/barman-SV-PDU2/: domain.pddl
measurement-tool/domain/barman-SV-PRA1/: domain.pddl
measurement-tool/domain/barman-SV-PRA2/: domain.pddl
measurement-tool/domain/barman-SV-PRR/: domain.pddl
measurement-tool/domain/blocks-world-MI-REF1/: domain.pddl
measurement-tool/domain/blocks-world-MI-REF2/: domain.pddl
measurement-tool/domain/blocks-world-MI-ROA/: domain.pddl
measurement-tool/domain/blocks-world-MI-ROB/: problem101.pddl  problem11.pddl  (+8 more)
measurement-tool/planner/: README.md
measurement-tool/planner/NoveltyFB/src/backward_model/: CMakeLists.txt  base_search_prob.hxx  bwd_action.cxx  bwd_action.hxx  bwd_cond_eff.cxx  bwd_cond_eff.hxx  bwd_fluent.cxx  bwd_fluent.hxx  bwd_fwd_search_prob.cxx  bwd_fwd_search_prob.hxx  bwd_h_1.hxx  bwd_h_2.hxx  bwd_heuristic.hxx  bwd_landmark_count.hxx  bwd_landmark_graph.cxx  bwd_landmark_graph.hxx  bwd_landmark_graph_generator.hxx  bwd_landmark_graph_manager.hxx  bwd_layered_h_max.hxx  bwd_match_tree.cxx  bwd_match_tree.hxx  bwd_mutex_set.cxx  bwd_mutex_set.hxx  bwd_novelty_partition.hxx  bwd_open_list.hxx  bwd_reachability.cxx  bwd_reachability.hxx  bwd_search_prob.cxx  bwd_search_prob.hxx  bwd_strips_prob.cxx  bwd_strips_prob.hxx  bwd_strips_state.cxx  bwd_strips_state.hxx  bwd_succ_gen.cxx  bwd_succ_gen.hxx  bwd_types.hxx  negation_action.cxx  negation_action.hxx  negation_fluent.cxx  negation_fluent.hxx
measurement-tool/planner/NoveltyFB/src/backward_search_engine/: CMakeLists.txt  bfws_forward_backward.hxx  rp_heuristic_bfws.hxx
measurement-tool/planner/NoveltyFB/src/planner/: CMakeLists.txt  planner_py_module.cxx
measurement-tool/planner/NoveltyFB/src/planner/approximate_novelty_search/: CMakeLists.txt
measurement-tool/planner/NoveltyFB/src/planner/approximate_novelty_search/fwdbwd_approximate_bfws/: CMakeLists.txt  fwdbwd_approximate_bfws.cxx  fwdbwd_approximate_bfws.hxx  planner_config.yml
measurement-tool/src/: cli.py  measure_baseline_energy.py  measure_planner_energy.py
(+2275 files in other folders)
